--- a/RangShala/Views/Home/Artwork.cshtml
+++ b/RangShala/Views/Home/Artwork.cshtml
@@ -114,16 +114,23 @@
                 </a>
             </div>
             <div class="artwork-card">
-                <img src="~/Images/mandala art.jpg" alt="Mandala Art">
-                <h3>Mandala Art</h3>
+                <a href="@Url.Action("MandalaArt", "Home")">
+
+                    <img src="~/Images/mandala art.jpg" alt="Mandala Art">
+                    <h3>Mandala Art</h3>
+                </a>
             </div>
             <div class="artwork-card">
-                <img src="~/Images/animee.jpg" alt="Anime">
-                <h3>Anime</h3>
+                <a href="@Url.Action("Anime", "Home")">
+                    <img src="~/Images/animee.jpg" alt="Anime">
+                    <h3>Anime</h3>
+                </a>
             </div>
             <div class="artwork-card">
-                <img src="~/Images/oil Painting.jpeg" alt="Oil Painting">
-                <h3>Oil Painting</h3>
+                <a href="@Url.Action("OilPainting", "Home")">
+                    <img src="~/Images/oil Painting.jpeg" alt="Oil Painting">
+                    <h3>Oil Painting</h3>
+                </a>
             </div>
             <div class="view-all-container">
                 <a href="@Url.Action("ArtworkGallery", "Home")" class="view-all-button">View All</a>
