--- a/RangShala/Views/Shared/_Layout.cshtml
+++ b/RangShala/Views/Shared/_Layout.cshtml
@@ -31,7 +31,9 @@
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
                     <li>@Html.ActionLink("Artwork", "Artwork", "Home")</li>
                     <li>@Html.ActionLink("Artist", "Artist", "Home")</li>
+                    <a href="@Url.Action("BeSpokeservice", "Home")">
                     <li>@Html.ActionLink("Bespoke Services", "Bespoke", "Home")</li>
+                    </a>
                     <li>@Html.ActionLink("Join Us", "Join", "Home")</li>
                     <li>@Html.ActionLink("Curator Consult", "Consult", "Home")</li>
 
@@ -48,7 +50,7 @@
                     </button>
                 </form>
                 <a href="#"><i class="fas fa-comment-dots"></i></a>
-                <a href="#"><i class="fas fa-user"></i></a>
+                <a href="@Url.Action("LoginRegister", "Home")"><i class="fas fa-user"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
         </div>
