--- a/RangShala/Views/Shared/_Layout.cshtml
+++ b/RangShala/Views/Shared/_Layout.cshtml
@@ -31,9 +31,7 @@
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
                     <li>@Html.ActionLink("Artwork", "Artwork", "Home")</li>
                     <li>@Html.ActionLink("Artist", "Artist", "Home")</li>
-                    <a href="@Url.Action("BeSpokeservice", "Home")">
                     <li>@Html.ActionLink("Bespoke Services", "Bespoke", "Home")</li>
-                    </a>
                     <li>@Html.ActionLink("Join Us", "Join", "Home")</li>
                     <li>@Html.ActionLink("Curator Consult", "Consult", "Home")</li>
 
@@ -94,12 +92,12 @@
             <div class="artist-card">
                 <img src="~/Images/NiyatiAgravat.jpeg" alt="Niyati Agravat" class="artist-photo">
                 <h3>Niyati Agravat</h3>
-                <button class="explore-button">Explore</button>
+                <a href="@Url.Action("Niyati", "Home")" class="explore-button">Explore</a>
             </div>
             <div class="artist-card">
                 <img src="~/Images/AyushiBabariya.jpeg" alt="Ayushi Babariya" class="artist-photo">
                 <h3>Ayushi Babariya</h3>
-                <button class="explore-button">Explore</button>
+                <a href="@Url.Action("Ayushi", "Home")" class="explore-button">Explore</a>
             </div>
         </div>
     </div>
