--- a/RangShala/Views/Shared/_Layout.cshtml
+++ b/RangShala/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <li>@Html.ActionLink("About Us", "About", "Home")</li>
                     <li>@Html.ActionLink("Artwork", "Artwork", "Home")</li>
                     <li>@Html.ActionLink("Artist", "Artist", "Home")</li>
-                    <li>@Html.ActionLink("Bespoke Services", "Bespoke", "Home")</li>
+                    <li>@Html.ActionLink("Bespoke Services", "Bespokeservice", "Home")</li>
                     <li>@Html.ActionLink("Join Us", "Join", "Home")</li>
                     <li>@Html.ActionLink("Curator Consult", "Consult", "Home")</li>
 
